--- a/BuchLeaflet/code/1/1/Circle_.html
+++ b/BuchLeaflet/code/1/1/Circle_.html
@@ -1,5 +1,5 @@
 &lt;html&gt;
-&lt;head&gt;&lt;title&gt;Leaflet.js Essentials&lt;/title&gt;
+&lt;head&gt;&lt;title&gt;Eine OSM Karte mit Leaflet&lt;/title&gt;
 &lt;link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.css" /&gt;
 &lt;/head&gt;
 &lt;body&gt;
@@ -7,7 +7,7 @@
 
 &lt;div id="map" style="width: 600px; height: 400px"&gt;&lt;/div&gt;
 &lt;script&gt;
-var map = L.map('map', 
+var map = L.map('map',
 {
 center: [35.10418, -106.62987],
 zoom: 10
