--- a/BuchLeaflet/code/1/1/InteractiveMapExample.html
+++ b/BuchLeaflet/code/1/1/InteractiveMapExample.html
@@ -1,12 +1,11 @@
 <html>
 <head>
-	<title>Leaflet Quick Start Guide Example</title>
-	<meta charset="utf-8" />
-
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-	 <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.css" />
+<title>Eine OSM Karte mit Leaflet</title>
+<link rel="stylesheet" href="https://unpkg.com/leaflet@1.1.0/dist/leaflet.css" />
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
+
 <body>
 <div style="width:600px; height:200px">
 <br><br><h1>Enter a Point</h1>
@@ -22,7 +21,8 @@ Name:<input type="text" id="name">
  <script src="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.js"></script>
 	<script>
 
-
+
+
 var map = L.map('map').setView([35.10418, -106.62987],10);
 
 L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png').addTo(map);
