--- a/BuchLeaflet/code/1/1/Polygon.html
+++ b/BuchLeaflet/code/1/1/Polygon.html
@@ -1,13 +1,14 @@
 <html>
-<head><title>Leaflet.js Essentials</title>
-<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.css" />
+<head>
+<title>Eine OSM Karte mit Leaflet</title>
+<link rel="stylesheet" href="https://unpkg.com/leaflet@1.1.0/dist/leaflet.css" />
 </head>
 <body>
 <script src="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.js"></script>
 
 <div id="map" style="width: 600px; height: 400px"></div>
 <script>
-var map = L.map('map', 
+var map = L.map('map',
 {
 center: [35.10418, -106.62987],
 zoom: 10
