--- a/BuchLeaflet/code/1/1/Rectangle.html
+++ b/BuchLeaflet/code/1/1/Rectangle.html
@@ -1,21 +1,20 @@
 <html>
-<head><title>Leaflet.js Essentials</title>
-<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.css" />
+<head>
+<title>Eine OSM Karte mit Leaflet</title>
+<link rel="stylesheet" href="https://unpkg.com/leaflet@1.1.0/dist/leaflet.css" />
 </head>
 <body>
 <script src="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.js"></script>
 
 <div id="map" style="width: 600px; height: 400px"></div>
 <script>
-var map = L.map('map', 
+var map = L.map('map',
 {
 center: [35.10418, -106.62987],
 zoom: 10
 });
 L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png').addTo(map);
-
-var myMarker = L.marker([35.10418, -106.62987],
-{title:"The Big I",alt:"The Big I",draggable:true}).addTo(map);
+var myRectangle = L.rectangle([[35.19738, -106.875],[35.10418, -106.62987]], {color: "red", weight: 8,fillColor:"blue"}).addTo(map);
 
 </script>
 </body>
