--- a/BuchLeaflet/code/1/1/index_99_1_p.html
+++ b/BuchLeaflet/code/1/1/index_99_1_p.html
@@ -1,7 +1,7 @@
-&lt;html>
-&lt;head>
-&lt;title>Eine OSM Karte mit Leaflet&lt;/title>
-&lt;/head>
-&lt;body>
-&lt;/body>
-&lt;/html>
+&lt;html&gt;
+&lt;head&gt;
+&lt;title&gt;Eine OSM Karte mit Leaflet&lt;/title&gt;
+&lt;/head&gt;
+&lt;body&gt;
+&lt;/body&gt;
+&lt;/html&gt;
