--- a/BuchLeaflet/presentation/index.html
+++ b/BuchLeaflet/presentation/index.html
@@ -48,7 +48,17 @@
 
 				<!-- Erstes Kapitel -->
 				<section data-background-color="#f9b431">
-					<section>Vertical Slide 1</section>
+					<section>Eine Leaflet-Karte erstellen</section>
+
+					<section id="fragments">
+						<h2>Um eine Karte mit Leaflet auf einer Internetseite anzuzeigen, reichen wenige Schritte aus:</h2>
+						<ul>
+							<li class="fragment">Integrieren Sie die notwendigen JavaScript und Cascading Style Sheet (CSS) Dateien.</li>
+							<li class="fragment">Erstellen Sie ein &lt;div&gt;-Element in dem die Karte angezeigt werden soll.</li>
+							<li class="fragment">Erstellen Sie das Karten-Objekt.</li>
+							<li class="fragment">Fügen Sie einen Karten-Layer zur Karte hinzu.</li>
+						</ul>
+					</section>
 					<section>
 						<pre><code data-trim data-noescape>
 							&lt;html&gt;
@@ -60,9 +70,38 @@
 							&lt;/html&gt;
 						</code></pre>
 					</section>
-					<section>Vertical Slide 2</section>
-					<section>Vertical Slide 1</section>
+					<section>Integrieren Sie die notwendigen JavaScript und Cascading Style Sheet (CSS) Dateien</section>
+					<section>
+						<pre><code data-trim data-noescape>
+							&lt;html&gt;
+						</code></pre>
+					</section>
+					<section>Erstellen Sie ein &lt;div&gt;-Element in dem die Karte angezeigt werden soll</section>
+					<section>
+						<pre><code data-trim data-noescape>
+							&lt;html&gt;
+						</code></pre>
+					</section>
+					<section>Erstellen Sie das Karten-Objekt</section>
+					<section>
+						<pre><code data-trim data-noescape>
+							&lt;html&gt;
+						</code></pre>
+					</section>
+					<section>Fügen Sie einen Karten-Layer zur Karte hinzu</section>
+					<section>
+						<pre><code data-trim data-noescape>
+							&lt;html&gt;
+						</code></pre>
+					</section>
+					<section>Das Ergebnis:</section>
 				</section>
+
+
+
+
+
+
 
 
 
