--- a/BuchLeaflet/presentation/code/index_994_thunderforest.html
+++ b/BuchLeaflet/presentation/code/index_994_thunderforest.html
@@ -9,7 +9,7 @@
 <div style="height: 700px;" id="mapid"></div>
 <script>
 var mymap = L.map('mapid').setView([50.27264, 7.26469], 13);
-L.tileLayer('https://{s}.tile.thunderforest.com/landscape/{z}/{x}/{y}.png?apikey=8db5bf38e3d841b6a57a7201f78cfbec').addTo(mymap);
+L.tileLayer('https://{s}.tile.thunderforest.com/pioneer/{z}/{x}/{y}.png?apikey=8db5bf38e3d841b6a57a7201f78cfbec').addTo(mymap);
 </script>
 </body>
 </html>
