--- a/BuchLeaflet/code/3/index_962.html
+++ b/BuchLeaflet/code/3/index_962.html
@@ -11,14 +11,9 @@
 
 <div style="height: 700px;" id="mapid"></div>
 <script>
-var mymap = L.map('mapid').setView([50.27264, 7.26469], 9);
+var mymap = L.map('mapid').setView([50.1555 , 7.591838], 10);
 
 L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png').addTo(mymap);
-
-
-
-
-
 
 var points = [
 [50.1555 , 7.591838 , "<img src='http://lorempixel.com/200/200/'>"],
@@ -746,17 +741,24 @@ var points = [
 [50.088041 , 7.652033 , "<img src='http://lorempixel.com/200/200/'>"]
 ];
 
+/*
 for(var i=0;i<points.length;i++)
 {
 L.marker(
 [parseFloat(points[i][0]),parseFloat(points[i][1])],
 {opacity:0}).bindPopup(points[i][2],{keepInView:true}).addTo(mymap);
 }
+*/
 
-var heat = L.heatLayer(points,{blur:40,maxZoom:15,radius:15,gradient:{0.4: 'blue', 0.65: 'yellow', 1: 'red'}}).addTo(mymap);
-
-heat.addLatLng([35,-106]);
-
+var heat = L.heatLayer(points,
+{
+minOpacity: 0.95,
+blur: 15,
+maxZoom: 15,
+max: 1,
+radius: 15,
+gradient: {0.4: 'blue', 0.65: 'lime', 1: 'red'}
+}).addTo(mymap);
 
 </script>
 </body>
