--- a/BuchLeaflet/code/3/index_956.html
+++ b/BuchLeaflet/code/3/index_956.html
@@ -8,7 +8,8 @@
 <script src="gemeinden.js"></script>
 </head>
 <body>
-
+<button onclick="total()">Population</button>
+<button onclick="density()">Population/Fläche</button>
 <div style="height: 700px;" id="mapid"></div>
 <script>
 var mymap = L.map('mapid', {doubleClickZoom:false}).setView([49.9555 , 7.591838], 8);
@@ -25,6 +26,16 @@ x > 100 ? '#fdd49e' :
 x > 0   ? '#fee8c8' :'#fff7ec';
 }
 
+function dcolor(x) {
+return x > 500 ? '#990000' :
+x > 400 ? '#d7301f' :
+x > 300 ? '#ef6548' :
+x > 200 ? '#fc8d59' :
+x > 100 ? '#fdbb84' :
+x > 50  ? '#fdd49e' :
+x > 0   ? '#fee8c8' :'#fff7ec';
+}
+
 function myStyle(feature) {
 return {
 fillColor: color(feature.properties.destatis.population),
@@ -35,8 +46,26 @@ fillOpacity: 0.85
 };
 }
 
+function mydStyle(feature) {
+return {
+fillColor: dcolor(feature.properties.destatis.population/feature.properties.destatis.area),
+weight: 1,
+opacity: 1,
+color: 'white',
+fillOpacity: 0.85
+};
+}
+
+function total(){
 var geoJsonLayer = L.geoJson(ct, {style: myStyle}).addTo(mymap);
+removeLayer(densitylayer);
+}
+function density(){
+var densitylayer=L.geoJson(ct, {style: mydStyle}).addTo(mymap);
+removeLayer(geoJsonLayer);
+}
 
 </script>
+
 </body>
 </html>
