--- a/BuchLeaflet/code/4/index_953.html
+++ b/BuchLeaflet/code/4/index_953.html
@@ -18,7 +18,9 @@ var mymap = L.map('mapid', {doubleClickZoom:false}).setView([50.27264, 7.26469],
 L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png').addTo(mymap);
 
 L.marker([50.27264, 7.26469], {
-icon: L.BeautifyIcon.icon(),
+icon: L.BeautifyIcon.icon(
+//{iconSize: [50, 50]}
+),
 draggable: true
 }).addTo(mymap).bindPopup("Ich bin ein beautify Marker");
 
