--- a/BuchLeaflet/code/4/index_948.html
+++ b/BuchLeaflet/code/4/index_948.html
@@ -6,26 +6,38 @@
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.1.0/dist/leaflet.css"/>
 <script src="https://unpkg.com/leaflet@1.1.0/dist/leaflet.js"></script>
 <script src="AnimatedMarker.js"></script>
+<script src="bouncemarker.js"></script>
 </head>
 <body>
+<button onclick="start()">Start</button>
+<button onclick="stop()">Stop</button>
 <div style="height: 700px;" id="mapid"></div>
 <script>
-var mymap = L.map('mapid', {doubleClickZoom:false}).setView([50.27264, 7.26469], 9);
+var mymap = L.map('mapid', {doubleClickZoom:false}).setView([50.27264, 7.26469], 7);
 
 L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png').addTo(mymap);
-/*
-var line = L.polyline(
-[[50.68510, 7.94136],[50.68576, 6.94149],[51.68649, 6.94165]]),
-animatedMarker = L.animatedMarker(line.getLatLngs());*/
+
+b = new L.Marker([51.68649, 6.94165], {bounceOnAdd: true});
 
 var line = L.polyline(
 [[50.68510, 7.94136],[50.68576, 6.94149],[51.68649, 6.94165]]),
 animatedMarker = L.animatedMarker(line.getLatLngs(), {
-  distance: 200,  // meters
-  interval: 1000, // milliseconds
+  autoStart: false,
+  distance: 2000,  // meters
+  interval: 100, // milliseconds
+  onEnd: function() {
+	  b.addTo(mymap);
+	  b.bounce({duration: 100, height: 50});
+  mymap.removeLayer(animatedMarker);
+  setTimeout('hide()', 900);
+  }
 });
 
 mymap.addLayer(animatedMarker);
+
+function start(){animatedMarker.start();}
+function stop(){animatedMarker.stop();}
+function hide(){mymap.removeLayer(b);}
 
 
 </script>
