--- a/BuchLeaflet/code/4/index_949.html
+++ b/BuchLeaflet/code/4/index_949.html
@@ -8,6 +8,8 @@
 <script src="AnimatedMarker.js"></script>
 </head>
 <body>
+<button onclick="start()">Start</button>
+<button onclick="stop()">Stop</button>
 <div style="height: 700px;" id="mapid"></div>
 <script>
 var mymap = L.map('mapid', {doubleClickZoom:false}).setView([50.27264, 7.26469], 9);
@@ -21,11 +23,15 @@ animatedMarker = L.animatedMarker(line.getLatLngs());*/
 var line = L.polyline(
 [[50.68510, 7.94136],[50.68576, 6.94149],[51.68649, 6.94165]]),
 animatedMarker = L.animatedMarker(line.getLatLngs(), {
-  distance: 3000,  // meters
-  interval: 2000, // milliseconds
+  autoStart: false,
+  distance: 200,  // meters
+  interval: 1000 // milliseconds
 });
 
 mymap.addLayer(animatedMarker);
+
+function start(){animatedMarker.start();}
+function stop(){animatedMarker.stop();}
 
 
 </script>
