--- a/BuchLeaflet/code/1/index_990_p.html
+++ b/BuchLeaflet/code/1/index_990_p.html
@@ -1,13 +1,13 @@
-<!DOCTYPE HTML>
-<html>
-<head>
-<title>Eine OSM Karte mit Leaflet</title>
-<link rel="stylesheet" href="../leaflet/leaflet.css" />
-<script src="../leaflet/leaflet.js"></script>
-</head>
-<body>
-<div style="height: 700px;" id="mapid"></div>
-<script>
+&lt;!DOCTYPE HTML&gt;
+&lt;html&gt;
+&lt;head&gt;
+&lt;title&gt;Eine OSM Karte mit Leaflet&lt;/title&gt;
+&lt;link rel="stylesheet" href="https://unpkg.com/leaflet@1.2.0/dist/leaflet.css" /&gt;
+&lt;script src="https://unpkg.com/leaflet@1.2.0/dist/leaflet.js"&gt;&lt;/script&gt;
+&lt;/head&gt;
+&lt;body&gt;
+&lt;div style="height: 700px;" id="mapid"&gt;&lt;/div&gt;
+&lt;script&gt;
 var mymap = L.map('mapid').setView([50.27264, 7.26469], 7);
 L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png').addTo(mymap);
 var dwd = L.tileLayer.wms("https://maps.dwd.de/geoserver/dwd/wms", {
@@ -22,6 +22,6 @@ transparent: true,
 layers:'dwd:Warnungen_Gemeinden_vereinigt',
 attribution: "Deutscher Wetterdienst"
 }).addTo(mymap);
-</script>
-</body>
-</html>
+&lt;/script&gt;
+&lt;/body&gt;
+&lt;/html&gt;
