--- a/BuchLeaflet/code/1/index_978.html
+++ b/BuchLeaflet/code/1/index_978.html
@@ -2,33 +2,28 @@
 <html>
 <head>
 <title>Eine OSM Karte mit Leaflet</title>
-<link rel="stylesheet" href="https://unpkg.com/leaflet@1.1.0/dist/leaflet.css" />
-<script src="https://unpkg.com/leaflet@1.1.0/dist/leaflet.js"></script>
+<link rel="stylesheet" href="../leaflet/leaflet.css" />
+<script src="../leaflet/leaflet.js"></script>
 </head>
 <body>
 <div style="height: 700px;" id="mapid"></div>
 <script>
 var mymap = L.map('mapid', {closePopupOnClick: false}).setView([50.27264, 7.26469], 7);
-
 L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png').addTo(mymap);
-
 var marker1 = L.marker([50.27264, 7.26469],
 {
 title:"Marker1",
 alt:"Ich bin Marker 1"
 }
 ).addTo(mymap);
-
 var marker2 = L.marker([51.27264, 6.26469],
 {
 title:"Marker2",
 alt:"Ich bin Marker 2"
 }
 ).addTo(mymap);
-
 marker1.bindPopup("<h1>Gering</h1><p>Ein kleines <a href='https://de.wikipedia.org/wiki/Dorf'>Dorf</a></p><ul><li>auf dem Maifeld</li><li>in der Eifel</li><li>an der Elz</li></ul>");
 marker2.bindPopup("<h1>Boisheim</h1><p>Ein kleines Dorf</p><ul><li>irgendwo</li><li>nordwestlich</li><li>von Gering</li></ul>");
-
 // popup offen zeigen
 // marker1.openPopup();
 
