--- a/BuchLeaflet/code/1/index_992.html
+++ b/BuchLeaflet/code/1/index_992.html
@@ -2,18 +2,18 @@
 <html>
 <head>
 <title>Eine OSM Karte mit Leaflet</title>
-<link rel="stylesheet" href="https://unpkg.com/leaflet@1.1.0/dist/leaflet.css" />
-<script src="https://unpkg.com/leaflet@1.1.0/dist/leaflet.js"></script>
+<link rel="stylesheet" href="../leaflet/leaflet.css" />
+<script src="../leaflet/leaflet.js"></script>
 </head>
 <body>
 <div style="height: 700px;" id="mapid"></div>
 <script>
 var mymap = L.map('mapid').setView([50.27264, 7.26469], 7);
 var dwd = L.tileLayer.wms("https://maps.dwd.de/geoserver/dwd/wms", {
-    format: 'image/png',
-    transparent: true,
-	layers:'dwd:bluemarble',
-	attribution: "Deutscher Wetterdienst"
+format: 'image/png',
+transparent: true,
+layers:'dwd:bluemarble',
+attribution: "Deutscher Wetterdienst"
 }).addTo(mymap);
 </script>
 </body>
