--- a/BuchLeaflet/code/1/index_993.html
+++ b/BuchLeaflet/code/1/index_993.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 <title>Eine OSM Karte mit Leaflet</title>
-<link rel="stylesheet" href="https://unpkg.com/leaflet@1.1.0/dist/leaflet.css" />
-<script src="https://unpkg.com/leaflet@1.1.0/dist/leaflet.js"></script>
+<link rel="stylesheet" href="../leaflet/leaflet.css" />
+<script src="../leaflet/leaflet.js"></script>
 <script type="text/javascript" src="http://maps.stamen.com/js/tile.stamen.js"></script>
 </head>
 <body>
